# Orbitars

./: CMakeLists.txt  Orbitars with Catch.sln
Debug/: Source.lib
Orbitar_Server/: Orbitar_Server.cpp  Orbitar_Server.vcxproj  Orbitar_Server.vcxproj.filters
Orbitars with Catch/: Asteroid.cpp  Asteroid.h  Bullet.cpp  Bullet.h  Catch2_Testing.cpp  Entity.cpp  Entity.h  Game.cpp  GameState.cpp  GameState.h  Host.cpp  IQuadTree.cpp  IQuadTree.h  IScreen.cpp  IScreen.h  IStars.cpp  IStars.h  Join.cpp  Main.cpp  Orbitars with Catch.7z  Orbitars with Catch.cpp  Orbitars with Catch.rc  Orbitars with Catch.vcxproj  Orbitars with Catch.vcxproj.filters  Packet.cpp  Packet.h  Player.cpp  Player.h  Resource.h  SQL_DB  Splash.cpp  UDP_GameState.h  UDP_Interface.cpp  UDP_Interface.h  Universal_Structures.h  db.db  qt.cpp  qt.h
Orbitars with Catch/Debug/: Orbitars with Catch.exe.recipe  asteroid.obj.enc  istars.obj.enc  orbitars with catch.obj.enc  vc142.idb
Orbitars with Catch/Debug/Orbitars.F1307E67.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Orbitars with Catch.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Orbitars with Catch/Release/: Orbitars with Catch.exe.recipe  Orbitars with Catch.ipdb  Orbitars with Catch.res
Orbitars with Catch/Release/Orbitars.F1307E67.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Orbitars with Catch.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Orbitars with Catch/catch2/: catch.hpp
Orbitars with Catch/sql/: ISQLDatabase.cpp  ISQLDatabase.h
Orbitars with Catch/x64/Debug/: Orbitars with Catch.exe.recipe  vc142.idb
Release/: Source.lib
Source/: Source.cpp  Source.vcxproj  Source.vcxproj.filters
Source/Debug/: Source.idb  Source.pch
Source/Release/: Source.pch
Test/: Test.cpp  Test.vcxproj  Test.vcxproj.filters  qt.cpp  qt.h
Test/Debug/: Test.exe.recipe  qt.obj.enc  vc142.idb
(+32 files in other folders)
